Second mini update due to image problem.

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
           <a class="creditsfinal" href="https://wa.me/6589322409">Admin WhatsApp: +8932 2409</a>
           <a class="creditsfinal" href="https://www.facebook.com/Lim-Kopi-Community-106732751090694">Facebook: Lim Kopi Community Page</a>
           <a class="creditsfinal">Instagram: Currently not available. Use hashtag #limkopisg</a><br><br>
-          <img src="Slide2.jpg" width="10%"><br><br><br><br>
+          <img src="Slide2.JPG" width="10%"><br><br><br><br>
       </footer>
 </body>
 
