--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" media="screen and (min-device-width: 800px)" href="style.css" />
+  <link rel="stylesheet" media="screen and (max-device-width: 799px)" href="style2.css" />
   <script src="script.js"></script>
     <title>Lim Kopi: The Singapore Community for everyone to share.</title>
     <link rel="icon" 
