--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <div id="parallax-world-of-ugg">
+  <div id="parallax-world-of-ugg" class="mobileincase">
 
     <section>
       <div class="title">
