--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <section>
       <div class="title">
+        <p>Our website is best viewed in landscape mode on your phone. Do optimize your experience. Thank you!</p><br><br><br>
         <h4>We need you.</h4>
         <h4>Support the senior community.</h4>
         <h5>LIM KOPI CAMPAIGN</h5>
