--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <p>Created by Lim Kopi Community 2020<br><br>Just email us at <a class="creditsfinal" href="mailto:limkopisingapore@gmail.com">limkopisingapore@gmail.com</a>to talk about your suggestions, ideas, over kopi.</p><br>
         <p>Credits: Photos are subjected to copyright, and belong to original owners.<br>No copyright infringement intended.<br>TodayOnline, TheSmartLocal, Qantas Travel Insider, Straits Times, AsiaOne.</p><br>
 
-        
+        <p>Parallax effect from <a class="creditsfinal" href="https://codepen.io/designbyremedy/pen/aqjLx">Andrew on Codepen</a></p>
           <br>
           <a class="creditsfinal" href="limkopisingapore.github.io">limkopisingapore.github.io</a>
           <a class="creditsfinal" href="limkopisingapore@gmail.com">limkopisingapore@gmail.com</a>
