--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <a class="creditsfinal" href="https://www.facebook.com/Lim-Kopi-Community-106732751090694">Facebook: Lim Kopi Community Page</a>
           <a class="creditsfinal">Instagram: Currently not available. Use hashtag #limkopisg</a><br><br>
           <img src="Slide2.JPG" width="10%"><br><br><br><br>
-    </footer></div>
+      </footer></div></div>
   <div id="content-mobile"> <div id="parallax-world-of-ugg">
 
     <section>
@@ -415,7 +415,7 @@
           <a class="creditsfinal"href="https://instagram.com/limkopisg">Instagram: @limkopisg</a><br><br>
           <img src="Slide2.JPG" width="30%"><br><br><br><br>
       </footer>
-    </div>
+      </div></div>
 </body>
 
 </html>
