--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section>
       <div>
         <h3>Table of Contents</h3>
-        <a onclick="smoothScroll(document.getElementById('parallax-one'))">1 Inspiration.</a><br>
+        <a href="#parallax-one">1 Inspiration.</a><br>
         <a onclick="smoothScroll(document.getElementById('parallax-two'))">2 Idea.</a><br>
         <a onclick="smoothScroll(document.getElementById('parallax-three'))">3 We need you.</a><br>
         <a onclick="smoothScroll(document.getElementById('parallax-four'))">4 Common Questions.</a><br>
