--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
     <section>
       <div>
         <h4>Table of Contents</h4><br>
-        <a onclick="smoothScroll(document.getElementById('parallax-one'))">1 Inspiration.</a><br>
-        <a onclick="smoothScroll(document.getElementById('parallax-two'))">2 Idea.</a><br>
-        <a onclick="smoothScroll(document.getElementById('parallax-three'))">3 We need you.</a><br>
-        <a onclick="smoothScroll(document.getElementById('parallax-four'))">4 Common Questions.</a><br>
+        <a href="#parallax-one">1 Inspiration.</a><br>
+        <a href="#parallax-two">2 Idea.</a><br>
+        <a href="#parallax-three">3 We need you.</a><br>
+        <a href="#parallax-four">4 Common Questions.</a><br>
       </div>
     </section><br><br><br><br>
 
