--- a/index.html
+++ b/index.html
@@ -237,15 +237,15 @@
     <section>
       <div>
         <h4>Table of Contents</h4><br>
-        <a href="#parallax-one">1 Inspiration.</a><br>
-        <a href="#parallax-two">2 Idea.</a><br>
-        <a href="#parallax-three">3 We need you.</a><br>
-        <a href="#parallax-four">4 Common Questions.</a><br>
+        <a onclick="smoothScroll(document.getElementById('parallax-five'))">1 Inspiration.</a><br>
+        <a onclick="smoothScroll(document.getElementById('parallax-six'))">2 Idea.</a><br>
+        <a onclick="smoothScroll(document.getElementById('parallax-seven'))">3 We need you.</a><br>
+        <a onclick="smoothScroll(document.getElementById('parallax-eight'))">4 Common Questions.</a><br>
       </div>
     </section><br><br><br><br>
 
     <section>
-      <div class="parallax-one" id="parallax-one">
+      <div class="parallax-one" id="parallax-five">
         <h2>1. Inspiration</h2>
       </div>
     </section>
@@ -262,7 +262,7 @@
     </section>
 
     <section>
-      <div class="parallax-two" id="parallax-two">
+      <div class="parallax-two" id="parallax-six">
         <h2>2. Idea</h2>
       </div>
     </section>
@@ -279,7 +279,7 @@
     </section>
 
     <section>
-      <div class="parallax-three" id="parallax-three">
+      <div class="parallax-three" id="parallax-seven">
         <h2>3. How you can help</h2>
       </div>
     </section>
@@ -299,7 +299,7 @@
     </section>
 
     <section>
-      <div class="parallax-four" id="parallax-four">
+      <div class="parallax-four" id="parallax-eight">
         <h2>4. Frequently Asked Questions</h2>
       </div>
     </section>
