--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section>
       <div class="title">
-        <p>You are currently in our wide version of the website. <br>If we haven't redirected you, and you're on mobile, click <b href="https://limkopisingapore.github.io/probable-eureka/">here.</b></p><br><br><br>
+        <p>You are currently in our wide version of the website. <br>If we haven't redirected you, and you're on mobile, click <a class="tanahhock" href="https://limkopisingapore.github.io/probable-eureka/">here.</a></p><br><br><br>
         <h4>We need you.</h4>
         <h4>Support the senior community.</h4>
         <h5>LIM KOPI CAMPAIGN</h5>
