--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <p class="margin-top-10">WE NEED YOU TO SHARE. Get this on board. <bold>Everyone else, just keep sharing.</bold> We need to spread the message around Singapore, to establish relationships between communities. Get back the strong spirit we had in the past. Where's it gone? Facebook, Instagram, Twitter, come on. Find us at</p><ul><li><a class="middle" href="https://www.facebook.com/Lim-Kopi-Community-106732751090694">Facebook: Lim Kopi Community Page</a></li><li>
           <a class="middle">Instagram: Currently not available. Use hashtag #limkopisg</a></li></ul><p>Yes. Share. So more and more people know our existence and provision of activities, and the community of conversations going on.</p>
           <p class="margin-top-10">WE NEED YOU TO SHARE. Get this on board. <bold>Honestly, not just seniors.</bold> Learning is for anyone. Though many seniors are alone, and of course it's so much better that they get the fun in life everyone should be getting, <bold> everyone should be learning. </bold>Even you. Join in the skills sessions, the valuable conversations that you can never have anywhere else. Same WhatsApp link. We'll direct you.</p>
-          <a class="middlea" href="https://wa.me/6589322409">click here to our whatsapp</a>
+          <a class="middlea" href="https://www.whatsapp.com/">click here to our whatsapp (currently invalid)</a>
           <p class="margin-top-10">WE NEED YOU TO SHARE. Get this on board. Finally, we're looking out for volunteers to vet people. Same WhatsApp link. Any queries, email works too. Either way, share, join, help. We're here as a Singapore community and this shouldn't stop at NDP.</p>
       </div>
     </section>
